<resources>
    <string name="app_name">Pomodoro</string>
    <string name="defaultTimeDisplay">00:00:00</string>
    <string name="startButtonText">Start</string>
    <string name="amountOfRepetitions">Add amount of repetitions</string>
    <string name="pauseTimeText">Set pause time:</string>
    <string name="workTimeText">Set work time:</string>
    <string name="countdownStatusText">COUNTING DOWN FROM:</string>
</resources>