<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/countdownStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countdownStatusText"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#edd0b2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <!-- Display for showing the countdown -->

    <TextView
        android:id="@+id/countDownView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultTimeDisplay"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <!-- Display for showing the work time selected -->

    <TextView
        android:id="@+id/workTimeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultTimeDisplay"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <TextView
        android:id="@+id/workTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workTimeText"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/workTimeView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countDownView"
        app:layout_constraintVertical_bias="1.0" />

    <!-- Display for showing the pause time selected -->

    <TextView
        android:id="@+id/pauseTimeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/defaultTimeDisplay"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <TextView
        android:id="@+id/pauseTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pauseTimeText"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <!-- Button configurations -->

    <Button
        android:id="@+id/startCountdownButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startButtonText"
        android:backgroundTint="#edd0b2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countDownView"
        app:layout_constraintVertical_bias="0.745" />

    <!-- Countdown for work and pause SeekBar Configuration -->

    <SeekBar
        android:id="@+id/countdownForWorkTimerSeekBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="127dp"
        android:progressTint="#757575"
        android:thumbTint="#edd0b2"
        android:max="300"
        android:min="15"
        app:layout_constraintBottom_toTopOf="@+id/startCountdownButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countDownView"
        app:layout_constraintVertical_bias="0.21" />

    <SeekBar
        android:id="@+id/countdownForPauseTimerSeekBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="93dp"
        android:layout_marginBottom="40dp"
        android:progressTint="#757575"
        android:thumbTint="#edd0b2"
        android:max="300"
        android:min="15"
        app:layout_constraintBottom_toTopOf="@+id/startCountdownButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdownForWorkTimerSeekBar"
        app:layout_constraintVertical_bias="0.189" />

    <!-- EditText for adding number of repetitions -->

    <EditText
        android:id="@+id/amountOfRepetitionsEditText"
        android:layout_width="223dp"
        android:layout_height="45dp"
        android:layout_marginEnd="88dp"
        android:backgroundTint="#edd0b2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/amountOfRepetitions"
        android:autofillHints="@string/amountOfRepetitions"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/startCountdownButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdownForPauseTimerSeekBar" />


</androidx.constraintlayout.widget.ConstraintLayout>